fe: add row format when stored as 'input/output format' and highlight syntax

--- a/forward_engineering/config.json
+++ b/forward_engineering/config.json
@@ -18,6 +18,7 @@
 		{
 			"name": "HiveQL Script",
 			"keyword": "hiveQl",
+			"mode": "sql",
 			"disableApplyScriptToInstance": true,
 			"fileExtensions": [{
 				"label": "application/hql", "value": "hql"
