--- a/reverse_engineering/config.json
+++ b/reverse_engineering/config.json
@@ -10,6 +10,7 @@
 			"NO_DATABASES": "There is no databases in the AWS Glue instance",
 			"WRONG_CONNECTION": "Can not connect to the AWS Glue instance"
 		},
-		"excludeDocKind": ["id"]
+		"excludeDocKind": ["id"],
+		"helpUrl": "https://hackolade.com/help/ConnecttoanAWSGlueDataCatalog.html"
 	}
 ]
