allow only positive values for cluster number of buckets

--- a/properties_pane/entity_level/entityLevelConfig.json
+++ b/properties_pane/entity_level/entityLevelConfig.json
@@ -347,7 +347,7 @@ making sure that you maintain a proper JSON format.
 				"propertyKeyword": "numBuckets",
 				"propertyType": "numeric",
 				"valueType": "number",
-				"allowNegative": true
+				"allowNegative": false
 			},
 			{
 				"propertyName": "Skewed by",
