--- a/reverse_engineering/config.json
+++ b/reverse_engineering/config.json
@@ -1,22 +1,16 @@
 [
-	{
-		"type": "file",
-		"menu_label": "HQL File",
-		"name": "hql",
-		"extensions": [
-			"hql"
-		],
-		"useMultipleFileReverse": true,
-		"defaultReverseSchemaType": "separate"
-	},
+    {
+        "type": "file",
+        "menu_label": "HQL File",
+        "name": "hql",
+        "extensions": ["hql"]
+    },
 	{
 		"errors": {
 			"NO_DATABASES": "There is no databases in the AWS Glue instance",
 			"WRONG_CONNECTION": "Can not connect to the AWS Glue instance"
 		},
-		"excludeDocKind": [
-			"id"
-		],
+		"excludeDocKind": ["id"],
 		"helpUrl": "https://hackolade.com/help/ConnecttoanAWSGlueDataCatalog.html"
 	}
 ]
