HCK-3350: add config options to enable multiselect files for RE from files

--- a/reverse_engineering/config.json
+++ b/reverse_engineering/config.json
@@ -1,16 +1,21 @@
 [
-    {
-        "type": "file",
-        "menu_label": "HQL File",
-        "name": "hql",
-        "extensions": ["hql"]
-    },
+	{
+		"type": "file",
+		"menu_label": "HQL File",
+		"name": "hql",
+		"extensions": [
+			"hql"
+		],
+		"useMultipleFileReverse": true
+	},
 	{
 		"errors": {
 			"NO_DATABASES": "There is no databases in the AWS Glue instance",
 			"WRONG_CONNECTION": "Can not connect to the AWS Glue instance"
 		},
-		"excludeDocKind": ["id"],
+		"excludeDocKind": [
+			"id"
+		],
 		"helpUrl": "https://hackolade.com/help/ConnecttoanAWSGlueDataCatalog.html"
 	}
 ]
